--- a/client/src/components/TwitterStyle.css
+++ b/client/src/components/TwitterStyle.css
@@ -1,33 +1,1 @@
-.twitter-timeline {
-    width: 70%;
-    /* max-height: 1000px; */
-    overflow: scroll;
-    margin-left: 150px;
-    
-}
-.fa {
-font-size: 25px;
-color: #FFFFFF;
-}
-.panel-title {
-font-size: 25px; 
-color: #FFFFFF;
-font-family: 'Open Sans', sans-serif;
-}
-.panel-heading {
-background-color: #1da1f2 !important;
-color: #1da1f2 !important;
-}
-.panel {
-margin-top: 25px;
-}
-
-element.style {
-    width: 70%;
-    /* margin: auto; */
-    margin-left: 300px;
-}
-  
-img.naturalimage-image {
-    display: none;
-}
+/*  */
